--- a/styles/board.css
+++ b/styles/board.css
@@ -130,7 +130,7 @@ body {
   min-width: 0;
   transition: transform 0.15s ease, box-shadow 0.15s ease;
   cursor: grab;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: calc(100vh - 370px);
   padding: 10px 10px 30px 10px;
 }
@@ -175,4 +175,41 @@ body {
   border-radius: 1.875rem;
   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.16);
   z-index: 1000;
+}
+
+@media screen and (max-width: 1024px) {
+  .board-content.content-wrapper {
+    margin-top: 40px;
+  }
+  .board__head {
+    margin-bottom: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .task-search-and-add{
+    justify-content: flex-start;
+  }
+
+  .board__table{
+    grid-template-columns: repeat(1, 1fr);
+    overflow-y: auto;
+    height: calc(100vh - 100px);
+    padding-bottom: 80px;
+  }
+
+  .tasks {
+    height: 300px;
+    flex-direction: row;
+    padding-bottom: 10px;
+    overflow: hidden;
+  }
+
+  .task {
+    width: 250px;
+  }
+
+.task__subtasks-and-progressbar-box {
+  flex-wrap: wrap;
+}
 }
