--- a/styles/task-card.css
+++ b/styles/task-card.css
@@ -50,20 +50,19 @@
 
 .task__subtasks-and-progressbar-box {
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   gap: 0.75rem;
   margin-bottom: 1.5rem;
+  width: 100%;
 }
 
 .task__progressbar {
   position: relative;
   width: 100%;
-  height: 0.5rem;
+  height: 0.8rem;
   border-radius: 10px;
   background: #eeeeee;
-  overflow: auto;
 }
 
 .task__progressbar::after {
@@ -74,6 +73,20 @@
   background: linear-gradient(to right, #4589ff, #00bee8, #00f88c);
   border-radius: 10px;
   transition: width 1.2s ease-in-out;
+  z-index: 1;
+}
+
+.task__progressbar-value {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -45%);
+  font-size: 0.7rem;
+  font-weight: 700;
+  color: black;
+  pointer-events: none;
+  user-select: none;
+  z-index: 2;
 }
 
 .task__subtasks {
