--- a/style.css
+++ b/style.css
@@ -311,7 +311,11 @@ select {
   }
 
   .content-wrapper {
-    padding: 0 1rem 0 1rem;
+    padding: 0 1rem 1rem 1rem;
+  }
+
+  .overflow-y {
+    height: calc(100vh - 180px);
   }
 }
 
